force-app/main/default/objects/ImportRequestQueue__c/ImportRequestQueue__c.object-meta.xml
<CustomObject>
    <description>Import Request Queue</description>
    <label>ImportRequestQueue</label>
    <nameField>
        <displayFormat>IRQ-{0000000000}</displayFormat>
        <label>ImportRequestQueue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ImportRequestQueues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>