force-app/main/default/objects/ImportRequestQueue__c/fields/Datasource__c.field-meta.xml
<CustomField>
    <fullName>Datasource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Datasource</label>
    <referenceTo>Datasource__c</referenceTo>
    <relationshipLabel>DatasourceInfos</relationshipLabel>
    <relationshipName>DatasourceInfo_del</relationshipName>
    <type>Lookup</type>
</CustomField>