force-app/main/default/objects/ImportRequestQueue__c/fields/Notified__c.field-meta.xml
<CustomField>
    <fullName>Notified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Email Notified</description>
    <label>Notified</label>
    <type>Checkbox</type>
</CustomField>