force-app/main/default/objects/ImportRequestQueue__c/fields/Requestor__c.field-meta.xml
<CustomField>
    <fullName>Requestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requestor</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Requestorss</relationshipLabel>
    <relationshipName>Requestors_del</relationshipName>
    <type>Lookup</type>
</CustomField>