force-app/main/default/objects/ImportRequestQueue__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <label>Processing Result</label>
    <length>8192</length>
    <type>LongTextArea</type>
</CustomField>